--- a/templates/header.html
+++ b/templates/header.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-  <header>
-    <div class="container">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Latest compiled and minified CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Latest compiled JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <title>Document</title>
+    </head>
+    <header>
+        <div class="container">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a href="http://127.0.0.1:5000/index"><button class="btn btn-primary" href="http://127.0.0.1:5000/index">Videos</button></a>
-              </li>
+                <li class="nav-item">
+                    <a href="http://127.0.0.1:5000/index"><button class="btn btn-primary" href="http://127.0.0.1:5000/index">Videos</button></a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a href="http://127.0.0.1:5000/create"><button class="btn btn-primary">Añadir Video</button></a>
-              </li>
+                <li class="nav-item">
+                    <a href="http://127.0.0.1:5000/create"><button class="btn btn-primary">Añadir Video</button></a>
+                </li>
             </ul>
         </nav>
-      <br>
-      <br>
-      <br>
     </div>
-  </header>
+    </header>
 
