--- a/templates/paginas/index.html
+++ b/templates/paginas/index.html
@@ -1,8 +1,7 @@
 {% include 'header.html' %}
 
-<div class="mt-4 p-5 bg-primary text-white rounded">
-  <h1>Jumbotron Example</h1>
-  <p>Lorem ipsum...</p>
+<div class="container pt-5 pb-5 my-5 bg-primary text-white">
+
 </div>
 
 {% include 'footer.html' %}
