--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,7 @@
             <div class="section_left">
                 <img src="{{ url_for('static', filename='logo_youtube.jpg' ) }}">
             </div>
-            <h1> BA Travel Agency</h1>
+            <h1> Youtube Downloader</h1>
         </div>
     </header>
 
