--- a/templates/paginas/create.html
+++ b/templates/paginas/create.html
@@ -7,9 +7,10 @@
         <input type="text" name="txtLink" id="txtLink">
         <br>
 
-        <h4>Tipo:</h4>
+        <label class="linear_label">
         Mp4<input type="radio" name="audio" id="audio" value="Mp4">
         Mp3<input type="radio" name="audio" id="audio" value="Mp3">
+        </label>
         <br>
         <br>
 
