Se cambia el funcionamiento de la app.py, solo un index, no se despliega una segunda ventana para descargar

--- a/templates/paginas/index.html
+++ b/templates/paginas/index.html
@@ -5,7 +5,7 @@
 <br>
 
 <div class="formulario">
-        <form method="post" action="/store" enctype="multipart/form-data">
+        <form method="post" action="/descargar" enctype="multipart/form-data">
             <span>
             <h3>link:</h3>
             <input type="text" name="txtLink" id="txtLink">
@@ -14,7 +14,7 @@
                 <h4>Tipo:</h4>
                 Mp4<input type="radio" name="audio" id="audio" value="Mp4">
                 Mp3<input type="radio" name="audio" id="audio" value="Mp3">
-                <input class="btn btn-primary" type="submit" value="Agregar">
+                <input class="btn btn-primary" type="submit" value="Descargar">
             </span>
         </form>
 </div>
